Melengkapi Rangkaian Kalimat

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         <p>
           <span class="lang-id">
             Saya <strong>Wildan Hidayat</strong>, lulusan terbaru (tahun 2025) dari
-            <strong>SMK PGRI 35 Solokanjeruk</strong>, jurusan <strong>Rekayasa Perangkat Lunak</strong>.
+            <strong>SMK PGRI 35 Solokanjeruk</strong>, dengan jurusan <strong>Rekayasa Perangkat Lunak</strong>.
             Saya memiliki antusiasme tinggi terhadap perkembangan
             <span style="color: #007BFF; font-weight: 600;">teknologi</span> dan
             <span style="color: #007BFF; font-weight: 600;">pemrograman</span>.
@@ -724,15 +724,15 @@
         <i class="fas fa-briefcase"></i>
         <div class="experience-text-container">
           <span class="lang-id">
-            <strong>Praktik Kerja Lapangan (PKL) - SMK Setia Bhakti</strong><br>
+            <strong>Praktik Kerja Lapangan (PKL) - Pengembangan Website Company Profile Menggunakan CSS Bootstrap 5</strong><br>
             <span class="experience-details">
-              (Bumiwangi, Ciparay | 3 Bulan) – Selama masa PKL, saya bertanggung jawab untuk merancang dan mengembangkan website SMK Setia Bhakti dengan fokus utama pada tampilan depan (front-end) dan antarmuka pengguna yang responsif serta estetis.
+              (Bumiwangi, Ciparay | 3 Bulan) – Selama masa PKL, saya bertanggung jawab untuk merancang dan mengembangkan website "SMK Setia Bhakti" dengan fokus utama pada tampilan depan (front-end) dan antarmuka pengguna yang responsif serta estetis.
             </span>
           </span>
           <span class="lang-en">
-            <strong>Field Work Practice (PKL) - SMK Setia Bhakti</strong><br>
+            <strong>Field Work Practice (PKL) - Company Profile Website Development Using CSS Bootstrap 5</strong><br>
             <span class="experience-details">
-              (Bumiwangi, Ciparay | 3 Months) – During my internship, I was responsible for designing and developing the SMK Setia Bhakti website with a focus on front-end development and creating a responsive, visually appealing user interface.
+              (Bumiwangi, Ciparay | 3 Months) – During the internship period, I was responsible for designing and developing the "SMK Setia Bhakti" website with a main focus on the front-end and responsive and aesthetic user interface.
             </span>
           </span>
         </div>
@@ -745,13 +745,13 @@
           <span class="lang-id">
             <strong>Operator Toko Fotokopi & Desain</strong><br>
             <span class="experience-details">
-              Bertanggung jawab atas layanan pelanggan, pengelolaan operasional harian, serta pembuatan desain grafis sederhana menggunakan Canva yang memenuhi kebutuhan klien.
+              Bertanggung jawab atas layanan pelanggan, pengelolaan operasional harian, merapihkan tata letak dan penulisan dokumen word, serta pembuatan desain grafis sederhana menggunakan Canva yang memenuhi kebutuhan klien.
             </span>
           </span>
           <span class="lang-en">
             <strong>Copy Shop & Design Operator</strong><br>
             <span class="experience-details">
-              Responsible for customer service, managing daily operations, and executing simple graphic design projects using Canva to meet client needs.
+              Responsible for customer service, managing daily operations, tidying up the layout and writing of word documents, and creating simple graphic designs using Canva that meet client needs.
             </span>
           </span>
         </div>
