--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portofolio Profesional Wildan Hidayat - Pengembang Web Junior dan Desainer Grafis.">
     <meta name="keywords" content="Wildan Hidayat, Portofolio, Web Developer, Junior Web Developer, Desainer Grafis, Rekayasa Perangkat Lunak, Bandung">
-    <link rel="icon" href="images/IMG-20240302-WA0010.jpg" type="image/jpeg">
+    <link rel="icon" href="images/WILDAN.jpg" type="image/jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -539,7 +539,7 @@
     <nav class="navbar">
         <div class="navbar-container">
             <a href="#home" class="logo internal-link">
-                <img src="images/IMG-20240302-WA0010.jpg" alt="Logo Wildan Hidayat">
+                <img src="images/WILDAN.jpg" alt="Logo Wildan Hidayat">
                 <span>Wildan Hidayat</span>
             </a>
             <button class="menu-toggle" id="mobileMenuToggle" aria-label="Toggle Menu" aria-expanded="false">
@@ -566,7 +566,7 @@
 
     <section id="home">
         <div class="home-content">
-            <img src="images/IMG-20240302-WA0010.jpg" alt="Foto Profil Wildan Hidayat">
+            <img src="images/WILDAN.jpg" alt="Foto Profil Wildan Hidayat">
             <h1>
                 <span class="lang-id">Selamat Datang di Portofolio Saya!</span>
                 <span class="lang-en">Welcome to My Portfolio!</span>
