--- a/index.html
+++ b/index.html
@@ -933,6 +933,19 @@
                 >Lihat Selengkapnya</button>
               </div>
             </div>
+            <div class="portfolio-item">
+              <img src="images/website.png" alt="Website Majelis Saung Ngopi">
+              <div class="portfolio-item-content">
+                <p class="project-title">
+                  <span class="lang-id">Website Majelis Ta'lim Saung Ngopi Alhidayah</span>
+                  <span class="lang-en">Website of the Saung Ngopi Alhidayah Ta'lim Council</span>
+                </p>
+                <a class="btn-view-more" href="https://majelistalimsaungngopialhidayah.github.io/" target="_blank" title="Kunjungi Website"><center>
+                  Kunjungi Website</center>
+                </a>
+              </div>
+            </div>
+            
           </div>
           <p class="portfolio-note">
             <span class="lang-id">(Beberapa proyek pilihan yang menunjukkan perkembangan keahlian saya.)</span>
