--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
     </div>
   </div>
   
-  <section id="kontak" class="content-section list-section">
+<section id="kontak" class="content-section list-section">
     <div class="content-wrapper">
       <h2>
         <span class="lang-id">Hubungi Saya</span>
@@ -996,6 +996,13 @@
         </li>
         <hr>
         <li>
+          <i class="fab fa-tiktok"></i>
+          <a href="https://www.tiktok.com/@wildan_assidqi_furi?_t=ZS-8wXeElMnkWN&_r=1" target="_blank" rel="noopener noreferrer">
+            TikTok: @wildan_assidqi_furi
+          </a>
+        </li>
+        <hr>
+        <li>
           <i class="fas fa-envelope"></i>
           <a href="mailto:wealdanh3@gmail.com">
             <span class="lang-id">Email: wealdanh3@gmail.com</span>
@@ -1003,25 +1010,29 @@
           </a>
         </li>
       </ul>
+      <hr>
+      <div class="map-container">
+        <iframe src="https://maps.google.com/maps?q=Solokanjeruk&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
     </div>
   </section>
-  
-    <footer>
-        <div class="container">
-            <h4><span class="lang-id">Terhubung Dengan Saya</span><span class="lang-en">Connect With Me</span></h4>
-            <div class="social-icon">
-                <a href="https://wa.me/6283875759507" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://www.instagram.com/wildan_assidqi_furi" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/wealduns.comeng" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                <a href="mailto:wealdanh3@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
-            </div>
-            <p><i class="fas fa-map-marker-alt"></i> <span class="lang-id">Solokanjeruk - Bandung, Jawa Barat</span><span class="lang-en">Solokanjeruk - Bandung, West Java</span></p>
-            <p class="copyright">
-                <span class="lang-id">Dirancang & Dikembangkan oleh</span><span class="lang-en">Designed & Developed by</span> <a href="#home" class="internal-link">Wildan Hidayat</a> &copy; <span id="currentYear"></span>
-            </p>
-        </div>
-    </footer>
 
+<footer>
+    <div class="container">
+        <h4><span class="lang-id">Terhubung Dengan Saya</span><span class="lang-en">Connect With Me</span></h4>
+        <div class="social-icon">
+            <a href="https://wa.me/6283875759507" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/wildan_assidqi_furi" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/wealduns.comeng" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.tiktok.com/@wildan_assidqi_furi?_t=ZS-8wXeElMnkWN&_r=1" target="_blank" rel="noopener noreferrer" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="mailto:wealdanh3@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+        </div>
+        <p><i class="fas fa-map-marker-alt"></i> <span class="lang-id">Solokanjeruk - Bandung, Jawa Barat</span><span class="lang-en">Solokanjeruk - Bandung, West Java</span></p>
+        <p class="copyright">
+            <span class="lang-id">Dirancang & Dikembangkan oleh</span><span class="lang-en">Designed & Developed by</span> <a href="#home" class="internal-link">Wildan Hidayat</a> &copy; <span id="currentYear"></span>
+        </p>
+    </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
