--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
 
     <section id="home">
         <div class="home-content">
-            <img src="images/WILDAN.jpg" alt="Foto Profil Wildan Hidayat">
+            <img src="images/calik.jpeg" alt="Foto Profil Wildan Hidayat">
             <h1>
                 <span class="lang-id">Selamat Datang di Portofolio Saya!</span>
                 <span class="lang-en">Welcome to My Portfolio!</span>
@@ -699,7 +699,7 @@
                 <span class="lang-id">Tentang Saya</span>
                 <span class="lang-en">About Me</span>
             </h2>
-            <img src="images/kiansantang.jpeg" alt="Foto Wildan Hidayat">
+            <img src="images/ninggaljam.jpeg" alt="Foto Wildan Hidayat">
             <p>
                 <span class="lang-id">
                     Saya <strong>Wildan Hidayat</strong>, lulusan terbaru (tahun 2025) dari
